--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "isbot": "^5.1.31",
     "lucide-react": "^0.560.0",
+    "luxon": "^3.5.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-router": "7.10.1",
@@ -33,6 +34,7 @@
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/luxon": "^3.4.2",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2",
