--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@tanstack/react-query": "^5.90.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "isbot": "^5.1.31",
     "lucide-react": "^0.560.0",
     "luxon": "^3.5.0",
     "react": "^19.2.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.2.1",
     "react-router": "7.10.1",
     "tailwind-merge": "^3.4.0",
